:computer: BotDicord | Att files token

--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "novelcovid": "^3.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LuciLua/HepyBotDiscord.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LuciLua/HepyBotDiscord/issues"
+  },
+  "homepage": "https://github.com/LuciLua/HepyBotDiscord#readme"
 }
